<resources>
    <string name="app_name">工况计算测试</string>
    <string name="vsion">版本 0.3 2025/1/05</string>
    <string name="button1">工况选择</string>
    <string name="button2">工况详情</string>
    <string name="button3">工况图显示</string>
    <string name="button4">待添加</string>
    <string name="ns1600">NS1600 电子计算软件</string>
    <string name="gjjy">格尔木机务段救援车间</string>
    <string name="distance">输入距离</string>
    <string name="angle">输入角度</string>
    <string name="Liftingcapacity">起重量</string>
    <string name="OK">确认</string>
    <string name="WorkingConditionDetails">工况详情</string>
    <string name="Counterweightextendsdistance">配重伸出距离</string>
    <string name="Outriggertype">支腿类型</string>
    <string name="Counterweighttype">配重类型</string>
    <string name="Rotationtype">回转类型</string>
    <string name="button">确认</string>
    <string name="todo">TODO</string>
    <string name="imbutton">TODO</string>
    <string name="textview">工况详情</string>
    <string name="editTextNumber">输入工况</string>
    <string name="todo2">TODO</string>
    <string name="workingbutton">刷新图表</string>
    <string name="editTextnumber2">角度</string>
    <string name="textviewworkgram">角度</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button4_fragment">计算起重量</string>
    <string name="input">输入</string>
    <string name="Liftingweightcalculation">起重量计算</string>
    <string name="info">信息</string>
    <string name="ivVenhiclelamage">TODO</string>
    <string name="height">Height</string>
    <string name="length">Length</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="sousuo">搜索</string>
    <string name="moreinfo">更多信息</string>
    <string name="cheliangxinxisousuo">搜索</string>
    <string name="cheliangxinxi">检索</string>
    <string name="cheliangxiabngxiinfo">车辆详细信息将显示在这里</string>
    <string name="labelName">车型</string>
    <string name="labelWeight">重量</string>
    <string name="labelLength">长度</string>
    <string name="labelHeight">高度</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>