<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/cell_shape"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/tvLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWeight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/length" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLength"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/height" />

    <Button
        android:id="@+id/button5"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:text="@string/moreinfo"
        android:textColor="#000000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
