<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nsgk.Fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="434dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent,VisualLintBounds,TextSizeCheck">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="385dp"
            android:layout_height="280dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingClass,MissingConstraints,VisualLintBounds">

        </com.github.mikephil.charting.charts.LineChart>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/textviewworkgram"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber2"
                app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextNumber2"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editTextnumber2"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#000000"
                android:textColorLink="@color/black"
                android:textCursorDrawable="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintBounds" />

            <Button
                android:id="@+id/button3"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:text="@string/workingbutton"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
                app:layout_constraintTop_toTopOf="@+id/editTextNumber2"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:hint="@string/Liftingweightcalculation"
                android:textColor="@color/black"
                android:textColorHint="@color/design_default_color_error"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/editTextNumber3"
                app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editTextNumber3"
                tools:ignore="TextSizeCheck,TextViewEdits,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editTextNumber3"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#000000"
                android:textColorLink="@color/black"
                android:textCursorDrawable="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintBounds" />

            <Button
                android:id="@+id/button4"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:text="@string/OK"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
                app:layout_constraintTop_toTopOf="@+id/editTextNumber2"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>